Fixing word wrap in code elements

--- a/client/views/posts/post_index/post_index.import.less
+++ b/client/views/posts/post_index/post_index.import.less
@@ -24,7 +24,7 @@
   }
 }
 
-pre {
+#PostIndex pre {
   overflow: auto;
   word-wrap: normal;
   white-space: pre;
